src/objects/zkmulti__MCPackageCheckpoint__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Date_Time__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>zkmulti__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package__c</fullName>
        <label>Package</label>
        <referenceTo>zkmulti__MCPackage__c</referenceTo>
        <relationshipLabel>Package Checkpoints</relationshipLabel>
        <relationshipName>Package_Checkpoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Package Checkpoint</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Package Checkpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>